Resolves: tdf#100770 crash on loading specific docx

use same safeguards as RemoveLastParagraph does

Change-Id: I43ed4eb28f44654054fd266bc464840af7014fea
(cherry picked from commit 000263f799d4aa9ad21e63f474def55438ce601e)